@@ -22,17 +22,23 @@
 #include "game_config.h"
 #include "game_mgr.h"
 #include "ppgltk/ui_mgr.h"
+
+#include <string.h>
+#include <stdlib.h>	
 	
 struct KeyMap{
 	SDLKey key;
-	char string[10];
+	const char *string;
 };
 
 static KeyMap keymap[] = {
-	{SDLK_LEFT,"left"},
-	{SDLK_RIGHT,"right"},
-	{SDLK_UP,"up"},
-	{SDLK_DOWN,"down"},
+	{SDLK_BACKSPACE,"backspace"},
+	{SDLK_TAB,"tab"},
+	{SDLK_CLEAR,"clear"},
+	{SDLK_PAUSE,"pause"},
+	{SDLK_SPACE,"space"},
+	{SDLK_DELETE,"delete"},
+		
 	{SDLK_KP0,"keypad 0"},
 	{SDLK_KP1,"keypad 1"},
 	{SDLK_KP2,"keypad 2"},
@@ -46,9 +52,59 @@ static KeyMap keymap[] = {
 	{SDLK_KP_PERIOD,"keypad ."},
 	{SDLK_KP_DIVIDE,"keypad /"},
 	{SDLK_KP_MULTIPLY,"keypad *"},
-	{SDLK_KP_MINUS,"keypad m"},
+	{SDLK_KP_MINUS,"keypad -"},
 	{SDLK_KP_PLUS,"keypad +"},
-	{SDLK_KP_EQUALS,"keypad ="}	
+	{SDLK_KP_EQUALS,"keypad ="},
+	{SDLK_KP_ENTER,"keypad enter"},
+
+	{SDLK_LEFT,"left"},
+	{SDLK_RIGHT,"right"},
+	{SDLK_UP,"up"},
+	{SDLK_DOWN,"down"},
+	
+	{SDLK_INSERT,"insert"},
+	{SDLK_HOME,"home"},
+	{SDLK_END,"end"},
+	{SDLK_PAGEUP,"page up"},
+	{SDLK_PAGEDOWN,"page down"},
+	
+	{SDLK_F1,"F1"},
+	{SDLK_F2,"F2"},
+	{SDLK_F3,"F3"},
+	{SDLK_F4,"F4"},
+	{SDLK_F5,"F5"},
+	{SDLK_F6,"F6"},
+	{SDLK_F7,"F7"},
+	{SDLK_F8,"F8"},
+	{SDLK_F9,"F9"},
+	{SDLK_F10,"F10"},
+	{SDLK_F11,"F11"},
+	{SDLK_F12,"F12"},
+	{SDLK_F13,"F13"},
+	{SDLK_F14,"F14"},
+	{SDLK_F15,"F15"},
+	
+	{SDLK_NUMLOCK,"numlock"},
+	{SDLK_CAPSLOCK,"capslock"},
+	{SDLK_SCROLLOCK,"scrollock"},
+	{SDLK_RSHIFT,"right shift"},
+	{SDLK_LSHIFT,"left shift"},
+	{SDLK_RCTRL,"right ctrl"},
+	{SDLK_LCTRL,"left ctrl"},
+	{SDLK_RALT,"right alt"},
+	{SDLK_LALT,"left alt"},
+	{SDLK_RMETA,"right meta"},
+	{SDLK_LMETA,"left meta"},
+	{SDLK_LSUPER,"left windows key"},
+	{SDLK_RSUPER,"right windows key"},
+	{SDLK_MODE,"mode shift"},
+	{SDLK_HELP,"help"},
+	{SDLK_PRINT,"print-screen"},
+	{SDLK_SYSREQ,"SysRq"},
+	{SDLK_BREAK,"break"},
+	{SDLK_MENU,"menu"},
+	{SDLK_POWER,"power"},
+	{SDLK_EURO,"euro"}	
 };
 
 	
@@ -58,7 +114,7 @@ KeyboardConfig::KeyboardConfig()
 	setTitle(_("Keyboard Configuration"));
 	
 	pp::Vec2d pos(0,0);
-	pp::Vec2d size(150,32);
+	pp::Vec2d size(250,32);
 	
 	mp_leftEntry = new pp::Entry(pos, size,
 				     "listbox_item");
@@ -126,31 +182,31 @@ KeyboardConfig::setWidgetPositions()
 	pp::Font *font = pp::Font::get("button_label");
 	
 	font->draw(_("Turn left:"),pos);
-	mp_leftEntry->setPosition(pp::Vec2d(pos.x+width-150,pos.y));
+	mp_leftEntry->setPosition(pp::Vec2d(pos.x+width-220,pos.y));
 		
 	pos.y-=40;
 	font->draw(_("Turn right:"),pos);
-	mp_rightEntry->setPosition(pp::Vec2d(pos.x+width-150,pos.y));
+	mp_rightEntry->setPosition(pp::Vec2d(pos.x+width-220,pos.y));
 	
 	pos.y-=40;
 	font->draw(_("Paddle:"),pos);
-	mp_paddleEntry->setPosition(pp::Vec2d(pos.x+width-150,pos.y));
+	mp_paddleEntry->setPosition(pp::Vec2d(pos.x+width-220,pos.y));
 	
 	pos.y-=40;
 	font->draw(_("Brake:"),pos);
-	mp_brakeEntry->setPosition(pp::Vec2d(pos.x+width-150,pos.y));
+	mp_brakeEntry->setPosition(pp::Vec2d(pos.x+width-220,pos.y));
 	
 	pos.y-=40;
 	font->draw(_("Jump:"),pos);
-	mp_jumpEntry->setPosition(pp::Vec2d(pos.x+width-150,pos.y));
+	mp_jumpEntry->setPosition(pp::Vec2d(pos.x+width-220,pos.y));
 	
 	pos.y-=40;
 	font->draw(_("Trick:"),pos);
-	mp_trickEntry->setPosition(pp::Vec2d(pos.x+width-150,pos.y));
+	mp_trickEntry->setPosition(pp::Vec2d(pos.x+width-220,pos.y));
 
 	pos.y-=40;
 	font->draw(_("Reset:"),pos);
-	mp_resetEntry->setPosition(pp::Vec2d(pos.x+width-150,pos.y));
+	mp_resetEntry->setPosition(pp::Vec2d(pos.x+width-220,pos.y));
 }
 
 void
@@ -188,8 +244,8 @@ KeyboardConfig::setKey(pp::Entry* widget, SDLKey key)
 
 std::string KeyboardConfig::getKey(SDLKey key)
 {
-	std::string content="";
-	if(isalnum(key)){
+	std::string content;
+	if(isprint(key)){
 		content=key;
 	}else{
 		for(unsigned int i=0;i<sizeof(keymap)/sizeof(KeyMap);i++){
@@ -199,6 +255,14 @@ std::string KeyboardConfig::getKey(SDLKey key)
 			}
 		}
 	}
+	
+	if(content.empty()){
+		char temp[10];
+		sprintf(temp,"%d",key);
+		content = "key ";
+		content += temp;
+	}
+	
 	return content;
 }
 
@@ -211,6 +275,14 @@ KeyboardConfig::getKey(std::string& string)
 				return keymap[i].key;
 			}
 		}
+		
+		if(string.length()>5){
+			if(!strncmp("key ",string.c_str(),4)){
+				int key = atoi(string.c_str()+4);
+				return SDLKey(key);				
+			}
+		}
+		
 		return SDLKey(string.c_str()[0]);		
 	}else{
 		return SDLKey(0);
